--- a/Pings.csproj
+++ b/Pings.csproj
@@ -7,10 +7,18 @@
     <Nullable>enable</Nullable>
     <PublishAot>true</PublishAot>
     <InvariantGlobalization>true</InvariantGlobalization>
+    <StartupObject>Pings.Program</StartupObject>
+    <Authors>dawn-lc</Authors>
+    <Company>https://github.com/dawn-lc</Company>
+    <PackageProjectUrl>https://github.com/dawn-lc/Pings</PackageProjectUrl>
+    <Copyright>MIT</Copyright>
+    <RepositoryUrl>https://github.com/dawn-lc/Pings</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <NeutralLanguage>zh-CN</NeutralLanguage>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Spectre.Console" Version="0.48.0" />
+    <PackageReference Include="Spectre.Console" Version="0.49.2-preview.0.13" />
   </ItemGroup>
 
 </Project>
