--- a/Pings.csproj
+++ b/Pings.csproj
@@ -9,6 +9,7 @@
     <OptimizationPreference>Size</OptimizationPreference>
     <PublishTrimmed>true</PublishTrimmed>
     <IsTrimmable>true</IsTrimmable>
+	<TrimmerRemoveSymbols>true</TrimmerRemoveSymbols>
     <UseSystemResourceKeys>true</UseSystemResourceKeys>
     <StackTraceSupport>false</StackTraceSupport>
     <MetadataUpdaterSupport>false</MetadataUpdaterSupport>
