--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -31,5 +31,5 @@ jobs:
         repo_token: "${{ secrets.GITHUB_TOKEN }}"
         automatic_release_tag: "${{ env.release_tag }}"
         prerelease: false
-        title: "最新版本"
+        title: "Releases"
         files: bin/Release/net8.0/win-x64/publish/Pings.exe
