--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -33,24 +33,21 @@ jobs:
       run: dotnet tool install -g GitVersion.Tool
 
     - name: Add GitVersion to PATH
-      shell: bash
-      run: echo "$(dotnet tool list -g | grep 'GitVersion.Tool' | awk '{print $4}')" >> $GITHUB_PATH
+      run: echo "$(echo $env:GITVERSION_JSON)" >> $Env:GITHUB_PATH
 
     - name: Use GitVersion
       id: gitversion
       run: dotnet-gitversion /output json /output buildserver
-      env:
-        GITVERSION_JSON: ${{ steps.gitversion.outputs.json }}
 
     - name: Extract GitVersion variables
       id: extract_variables
       run: |
-        echo "GITVERSION_JSON=${{ steps.gitversion.outputs.json }}" >> $GITHUB_ENV
-        echo "VERSION=$(echo ${{ steps.gitversion.outputs.json }} | jq -r .SemVer)" >> $GITHUB_ENV
-        echo "ASSEMBLY_SEMVER=$(echo ${{ steps.gitversion.outputs.json }} | jq -r .AssemblySemVer)" >> $GITHUB_ENV
-        echo "FILE_SEMVER=$(echo ${{ steps.gitversion.outputs.json }} | jq -r .FileSemVer)" >> $GITHUB_ENV
-        echo "FULL_SEMVER=$(echo ${{ steps.gitversion.outputs.json }} | jq -r .FullSemVer)" >> $GITHUB_ENV
-        echo "INFORMATIONAL_VERSION=$(echo ${{ steps.gitversion.outputs.json }} | jq -r .InformationalVersion)" >> $GITHUB_ENV
+        echo "GITVERSION_JSON=${{ steps.gitversion.outputs.json }}" >> $env:GITHUB_ENV
+        echo "VERSION=$(echo ${{ steps.gitversion.outputs.json }} | jq -r .SemVer)" >> $env:GITHUB_ENV
+        echo "ASSEMBLY_SEMVER=$(echo ${{ steps.gitversion.outputs.json }} | jq -r .AssemblySemVer)" >> $env:GITHUB_ENV
+        echo "FILE_SEMVER=$(echo ${{ steps.gitversion.outputs.json }} | jq -r .FileSemVer)" >> $env:GITHUB_ENV
+        echo "FULL_SEMVER=$(echo ${{ steps.gitversion.outputs.json }} | jq -r .FullSemVer)" >> $env:GITHUB_ENV
+        echo "INFORMATIONAL_VERSION=$(echo ${{ steps.gitversion.outputs.json }} | jq -r .InformationalVersion)" >> $env:GITHUB_ENV
     
     - name: Restore dependencies
       run: dotnet restore
