--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -9,3 +9,7 @@ next-version: 1.0.0
 assembly-versioning-scheme: MajorMinorPatch
 assembly-file-versioning-scheme: MajorMinorPatch
 commit-message-incrementing: Enabled
+caching:
+  enabled: true
+  cacheFolder: .gitversion
+  cacheKey: ${{ github.sha }}
