--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -54,7 +54,7 @@ jobs:
       run: dotnet-gitversion /output buildserver /config GitVersion.yml
 
     - name: Debug GitVersion
-      run: gitversion /diag
+      run: dotnet-gitversion /diag
 
     - name: Publish Windows Binaries
       run: dotnet publish ./${{ env.Project_Name }}.csproj -r win-x64 -c Release --output ./publish/
