--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -41,16 +41,16 @@ jobs:
 
     - name: Publish Windows Binaries
       run: dotnet publish ./${{ env.Project_Name }}.csproj -r win-x64 -c Release --output ./publish/
-
-    - uses: gittools/actions/gitreleasemanager/create@v3.0.0
-      name: Create release with GitReleaseManager
+    
+    - name: 发布新版本
+      uses: "marvinpinto/action-automatic-releases@latest"
       with:
-        repository: ${{ env.Project_Name }}
-        token: ${{ secrets.GITHUB_TOKEN }}
-        milestone: ${{ env.GitVersion_SemVer }}
-        name: '${{ env.Release_Tag }}'
-        assets: |
-          ./publish/${{ env.Project_Name }}.exe
+        repo_token: "${{ secrets.GITHUB_TOKEN }}"
+        automatic_release_tag: "${{ env.release_tag }}"
+        prerelease: true
+        title: "${{ env.GitVersion_SemVer }}"
+        files: |
+          publish/${{ env.Project_Name }}.exe
 
     - name: Create Git tag And Push
       run: |
