--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -54,6 +54,7 @@ jobs:
       with:
         repo_token: "${{ secrets.GITHUB_TOKEN }}"
         automatic_release_tag: "${{ env.Release_Tag }}"
+        prerelease: false
         title: "${{ env.GitVersion_SemVer }}"
         files: |
           publish/${{ env.Project_Name }}.exe
